<resources>
    <string name="app_name">Motivação</string>
    <string name="new_phrase">Nova frase</string>
    <string name="your_name">Qual é o seu nome?</string>
    <string name="user">User</string>
    <string name="phrase">Phrase</string>
    <string name="save">Salvar</string>
    <string name="lets_begin">Vamos começar?</string>
    <string name="phrases_all">Todas as frases</string>
    <string name="phrases_motivation">Frases de motivação</string>
    <string name="phrases_morning">Frases da manhã</string>
    <string name="hello">Olá</string>
    <string name="validation_madatory_name">Insira um nome</string>

    <string name="validation_mandatory_name">Inform your name.</string>
</resources>