<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/image_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_infinity"
            android:contentDescription="@string/phrases_all" />

        <ImageView
            android:id="@+id/image_happy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_happy"
            android:contentDescription="@string/phrases_motivation" />

        <ImageView
            android:id="@+id/image_sunny"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_sunny"
            android:contentDescription="@string/phrases_morning" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_menu"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <View
        android:layout_width="150dp"
        android:layout_height="3dp"
        android:layout_below="@+id/text_phrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/purple"
        android:elevation="5dp" />

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/cabin"
        android:text="@string/new_phrase"
        android:textAllCaps="true" />


</RelativeLayout>